Bug 100795 - Control point field in Position and Size dialog does not allow editing
Summary: Control point field in Position and Size dialog does not allow editing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.3 target:5.1.6
Keywords:
: 96210 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-07 07:28 UTC by Regina Henschel
Modified: 2016-09-21 12:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-07-07 07:28:33 UTC
There exists control point fields in Position&Size dialog since version 5.1
https://wiki.documentfoundation.org/ReleaseNotes/5.1#View.2FEdit_Control_Points
But in contrast to the release notes, the fields only show some values, but you cannot change the values. The fields are always disabled.
Comment 1 Heiko Tietze 2016-07-07 09:11:48 UTC
Works with LibO fresh and master under Linux. Control points are enabled and effective for circle pie. However, under Windows (running 5.3 in a VM) the input fields are disabled as Regina reports.
Comment 2 Caolán McNamara 2016-07-07 09:35:36 UTC
*** Bug 96210 has been marked as a duplicate of this bug. ***
Comment 3 Caolán McNamara 2016-07-07 09:36:01 UTC
its probably a 32bit vs 64bit thing of some kind
Comment 4 Commit Notification 2016-09-21 09:23:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25e4708c1f49986f3f082beb2e940aa2d7fb4d81

Resolves: tdf#100795 SAL_MIN_INT32 32bit overflows on finding min limit

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2016-09-21 12:56:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43a9d36ba9867feae8b52ffbb154c6bc2ac61163&h=libreoffice-5-2

Resolves: tdf#100795 SAL_MIN_INT32 32bit overflows on finding min limit

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2016-09-21 12:57:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=56a3b56689a458a8ff3f310940af07dac347a0c5&h=libreoffice-5-1

Resolves: tdf#100795 SAL_MIN_INT32 32bit overflows on finding min limit

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.