Resolves: tdf#100795 SAL_MIN_INT32 32bit overflows on finding min limit

for control points, so halve it to the practical limit

Change-Id: I1285631bebebf86e257a2fdd804c0c81dcefac96
(cherry picked from commit 25e4708c1f49986f3f082beb2e940aa2d7fb4d81)
Reviewed-on: https://gerrit.libreoffice.org/29132
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>